MX records for a domain can be pointed to a cloud mail filtering provider on the Email Options page, or using the modify-mail API command.
Added the rename-domain API command, to allow changing the domain name, username or home directory of a virtual server from the command line.
---- Changes since 4.19 ----
Removed support for Apache versions older than 2.0.
Backup logs are now associated with the scheduled backup that created them, and are linked in the UI.
The Excluded Directories page can now also be used to enter MySQL and PostgreSQL databases and tables to exclude from backups.
The paths to additional PHP versions can now be entered on the Virtualmin Configuration page, under PHP Options. This also makes it possible to run PHP version 7.
Added a tab to the Manage SSL Certificate page to request a certificate from the free Let's Encrypt service.
---- Changes since 5.00 ----
Updated the WordPress script installer to version 4.4.1, Moodle to 3.0.2 and 2.9.4, Drupal to 8.0.4, 7.43 and 6.38, eGroupware to 14.3.20160113, TikiWiki to 14.2, 12.6 and 6.15, IONcube to 5.0.23, Pydio to 6.2.2, Node.JS to 5.7.0, Magento to 1.9.2.4, Rails to 4.2.5.1, phpMyAdmin to 4.5.5.1, 4.4.15.5 and 4.0.10.15, ownCloud to 8.2.2, 7.0.12 and 6.0.9, Wordpress to 4.4.2, Dolibarr to 3.5.8, Piwik to 2.16.0, FengOffice to 3.4.0.17, LimeSurvey to 2.50, FosWiki to 2.1.0, IONcube to 5.1.1, phpMyFAQ to 2.8.26, PHPcalendar to 2.0.9, Django to 1.9.2, Joomla to 3.4.8, and Typo3 to 6.2.19.
Added support for multiple hostnames and automatic renewal of Let's Encrypt certificates.
---- Changes since 5.01 ----
Updated the Rails script installer to version 4.2.5.2, Drupal to 8.0.5, Django to 1.9.4, Revive AdServer to 3.2.3, FengOffice to 3.4.1, and Node.JS to 5.7.1.